--- a/UTeM_EComplaint/UTeM_EComplaint/Cells/StaffAssignedPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Cells/StaffAssignedPage.xaml
@@ -19,11 +19,8 @@
                     <Label Text="{Binding Damage}" HorizontalOptions="StartAndExpand" Style="{StaticResource CardLabel}"></Label>
                     <Label Text="{Binding Category.CategoryName}" Style="{StaticResource CardLabel}"></Label>
                     <Label Text="{Binding DamageType.DamageTypeName}" Style="{StaticResource CardLabel}"/>
-                    <Line X1="0" Y1="0" X2="360" Margin="0,20" Y2="0" HorizontalOptions="CenterAndExpand" Stroke="#9B9A99" />
-                    <StackLayout Orientation="Horizontal">
-                        <Label Text="Technician ID " Style="{StaticResource CardLabel}"/>
-                        <Label Text="{Binding Technician.TechnicianID}" Style="{StaticResource CardLabel}"/>
-                    </StackLayout>
+                </StackLayout>
+                <StackLayout>
                     <Line X1="0" Y1="0" X2="360" Margin="0,20,0,0" Y2="0" HorizontalOptions="CenterAndExpand" Stroke="#9B9A99" />
                     <Label Text="{Binding ComplaintDate}" HorizontalOptions="EndAndExpand" Margin="0,0,0,30" FontAttributes="Italic" Style="{StaticResource CardLabel}"></Label>
                 </StackLayout>
