--- a/UTeM_EComplaint/UTeM_EComplaint/Cells/TechnicianCompletedSoftwareCell.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Cells/TechnicianCompletedSoftwareCell.xaml
@@ -33,6 +33,9 @@
                     <Label Text="{Binding Action.Duration}" Style="{StaticResource CardLabel}" HorizontalOptions="EndAndExpand"/>
                 </StackLayout>
             </StackLayout>
+            <StackLayout>
+                <Image Source="leader.png" HeightRequest="30" IsVisible="{Binding Supervisor}"/>
+            </StackLayout>
         </StackLayout>
     </Frame>
 </Grid>
