--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Admin/AdminAssignDetailPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Admin/AdminAssignDetailPage.xaml
@@ -18,6 +18,31 @@
                                 <StackLayout Grid.Row="0" Grid.Column="0" Spacing="20" Padding="20">
                                 <Frame Style="{StaticResource Card}">
                                     <StackLayout>
+                                        <!--Staff information Title-->
+                                        <Label Text="Applicant Information" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" HorizontalOptions="Center" />
+                                        <Line Style="{StaticResource HorizontalLine}"/>
+                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto" RowSpacing="20">
+                                            <!--Staff ID-->
+                                            <Label Grid.Row="0" Grid.Column="0" Text="StaffID" TextColor="#0FC5BA" FontSize="Medium" />
+                                            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.Staff.StaffID}" Style="{StaticResource CardLabel}"/>
+
+                                            <!--Staff Name-->
+                                            <Label Grid.Row="1" Grid.Column="0" Text="Name" TextColor="#0FC5BA" FontSize="Medium" />
+                                            <Label Grid.Row="1" Grid.Column="1" Text="{Binding Complaint.Staff.Name}" Style="{StaticResource CardLabel}" />
+
+                                            <!--Responsibility Centre-->
+                                            <Label Grid.Row="2" Grid.Column="0" Text="Responsibility Centre" TextColor="#0FC5BA" FontSize="Medium" />
+                                            <Label Grid.Row="2" Grid.Column="1" Text="{Binding Complaint.Staff.ResponsibilityCentre}" Style="{StaticResource CardLabel}"/>
+
+                                            <!--Phone Number-->
+                                            <Label Grid.Row="3" Grid.Column="0" Text="Phone Number" TextColor="#0FC5BA" FontSize="Medium" />
+                                            <Label Grid.Row="3" Grid.Column="1" Text="{Binding Complaint.Staff.PhoneNumber}" Style="{StaticResource CardLabel}" />
+                                        </Grid>
+                                    </StackLayout>
+                                </Frame>
+                                    
+                                <Frame Style="{StaticResource Card}">
+                                    <StackLayout>
                                         <!--Information Report Title-->
                                         <Label Text="Information Report" Style="{StaticResource DetailTitle}" />
                                         <Line Style="{StaticResource HorizontalLine}" Stroke="black" />
@@ -47,7 +72,7 @@
                                                 <Label Grid.Row="2" Grid.Column="0" Text="Category" TextColor="#0FC5BA" FontSize="Medium" />
                                                 <Label Grid.Row="2" Grid.Column="1" Text="{Binding Complaint.Category.CategoryName}" Style="{StaticResource CardLabel}"/>
                                             </Grid>
-                                            <Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" IsVisible="{Binding IsSoftware}">
+                                            <Grid Grid.Row="3" Grid.Column="0" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto" Grid.ColumnSpan="2" IsVisible="{Binding IsSoftware}">
                                                 <!--System-->
                                                 <Label Grid.Row="0" Grid.Column="0" Text="System" TextColor="#0FC5BA" FontSize="Medium" />
                                                 <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.SoftwareSystem.DisplaySoftwareSystem}" Style="{StaticResource CardLabel}"/>
@@ -58,11 +83,17 @@
 
                                                 <!--Submodule-->
                                                 <Label Grid.Row="2" Grid.Column="0" Text="Submodule" TextColor="#0FC5BA" FontSize="Medium" />
-                                                <Label Grid.Row="2" Grid.Column="1" Text="{Binding Complaint.Submodule.DisplaySubmodule}" Style="{StaticResource CardLabel}"/>
+                                                <StackLayout Grid.Row="2" Grid.Column="1">
+                                                    <Label Text="{Binding Complaint.Submodule.DisplaySubmodule}" Style="{StaticResource CardLabel}"/>
+                                                </StackLayout>
 
                                                 <!--Submenu-->
                                                 <Label Grid.Row="3" Grid.Column="0" Text="Submenu" TextColor="#0FC5BA" FontSize="Medium"/>
                                                 <Label Grid.Row="3" Grid.Column="1" Text="{Binding Complaint.Submenu.DisplaySubmenu}" Style="{StaticResource CardLabel}"/>
+
+                                                <!--reference-->
+                                                <Label Grid.Row="4" Grid.Column="0" Text="Reference picture" TextColor="#0FC5BA" FontSize="Medium"/>
+                                                <Image Grid.Row="5" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
                                             </Grid>
 
                                             <!--Description-->
@@ -73,41 +104,29 @@
                                 </Frame>
 
                                 <Frame Style="{StaticResource Card}" IsVisible="{Binding IsHardware}">
-                                        <StackLayout>
-                                            <!--Information Report Title-->
-                                            <Label Text="Information Report" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
-                                            <Line Style="{StaticResource HorizontalLine}"/>
-                                            <Grid RowSpacing="20" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
-                                                <!--Complaint ID-->
-                                                <Label Grid.Row="0" Grid.Column="0" Text="Complaint ID" TextColor="#0FC5BA" FontSize="Medium" />
-                                                <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.ComplaintID}" Style="{StaticResource CardLabel}"/>
+                                    <StackLayout>
+                                        <!--Location Title-->
+                                        <Label Text="Location" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
+                                        <Line Style="{StaticResource HorizontalLine}"/>
+                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
 
-                                                <!--Complaint Date-->
-                                                <Label Grid.Row="1" Grid.Column="0" Text="Complaint Date" TextColor="#0FC5BA" FontSize="Medium" />
-                                                <Label Grid.Row="1" Grid.Column="1" Text="{Binding Complaint.ComplaintDate}" Style="{StaticResource CardLabel}"/>
+                                            <!--Location-->
+                                            <Label Grid.Row="0" Grid.Column="0" Text="Location" TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.Location}" Style="{StaticResource CardLabel}"/>
 
-                                                <!--Division-->
-                                                <Label Grid.Row="2" Grid.Column="0" Text="Division" TextColor="#0FC5BA" FontSize="Medium" />
-                                                <Label Grid.Row="2" Grid.Column="1" Text="{Binding Complaint.Division.DivisionName}" Style="{StaticResource CardLabel}"/>
-
-                                                <!--Damage Type-->
-                                                <Label Grid.Row="3" Grid.Column="0" Text="Damage Type" TextColor="#0FC5BA" FontSize="Medium" />
-                                                <Label Grid.Row="3" Grid.Column="1" Text="{Binding Complaint.DamageType.DamageTypeName}" Style="{StaticResource CardLabel}"/>
-
-                                                <!--Category-->
-                                                <Label Grid.Row="4" Grid.Column="0" Text="Category" TextColor="#0FC5BA" FontSize="Medium" />
-                                                <Label Grid.Row="4" Grid.Column="1" Text="{Binding Complaint.Category.CategoryName}" Style="{StaticResource CardLabel}"/>
-
-                                                <!--Description-->
-                                                <Label Grid.Row="5" Grid.Column="0" Text="Description" TextColor="#0FC5BA" FontSize="Medium"/>
-                                                <Label Grid.Row="5" Grid.Column="1" Text="{Binding Complaint.Damage}" Style="{StaticResource CardLabel}" />
-
-                                                <!--Location-->
-                                                <Label Grid.Row="6" Grid.Column="0" Text="Location" TextColor="#0FC5BA" FontSize="Medium"/>
-                                                <Label Grid.Row="6" Grid.Column="1" Text="{Binding Complaint.Location}" Style="{StaticResource CardLabel}"/>
+                                            <!--Map-->
+                                            <Label Grid.Row="3" Grid.Column="0" Text="Location in Map"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Grid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
+                                                <ContentView HeightRequest="500" Content="{Binding Map}"/>
+                                                <Image Source="placePin.png" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" HeightRequest="25"/>
                                             </Grid>
-                                        </StackLayout>
-                                    </Frame>
+
+                                            <!--Image-->
+                                            <Label Grid.Row="5" Grid.Column="0" Text="Reference Picture"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                            <Image Grid.Row="6" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
+                                        </Grid>
+                                    </StackLayout>
+                                </Frame>
                                 <Frame Style="{StaticResource Card}">
                                     <StackLayout>
                                         <!--Information Technician information-->
@@ -152,7 +171,7 @@
                                                             </StackLayout>
                                                             <StackLayout Margin="0,20,0,0" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2">
                                                                 <Label Text="Job Description: " Style="{StaticResource CardLabel}"/>
-                                                                <Entry Text="{Binding JobDescription}"></Entry>
+                                                                <Entry Text="{Binding JobDescription}" MaxLength="200"></Entry>
                                                             </StackLayout>
                                                         </Grid>
                                                     </Frame>
