--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Admin/AdminReportPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Admin/AdminReportPage.xaml
@@ -14,6 +14,14 @@
                           AbsoluteLayout.LayoutBounds="0,0,1,1" >
                 <ScrollView>
                     <StackLayout>
+                        <StackLayout BackgroundColor="White" Orientation="Horizontal" Padding="10,10">
+                            <!-- Complaint Type-->
+                            <Label  Text="Complaint Type" FontSize="Medium" TextColor="Black" VerticalOptions="Center"/>
+                            <Picker  Title="-- Select Complaint Type --" 
+                                                ItemsSource="{Binding ComplaintTypeList}" SelectedItem="{Binding SelectedComplaintType}"
+                                                ItemDisplayBinding="{Binding DisplayComplaintType}" HorizontalTextAlignment="Center" 
+                                                TextColor="Black" HorizontalOptions="FillAndExpand"/>
+                        </StackLayout>
                         <Frame Style="{StaticResource Card}">
                             <StackLayout>
                                 <Label Style="{StaticResource CardTitle}" Text="1 Month" Margin="0,10" HorizontalOptions="Center"/>
