--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffEditComplaintPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffEditComplaintPage.xaml
@@ -19,75 +19,113 @@
                             <StackLayout>
                                 <Label Text="Compaint" Style="{StaticResource DetailTitle}"/>
                                 <Line X1="0" Y1="0" X2="360" Y2="0" Margin="0,0,0,20" HorizontalOptions="CenterAndExpand" Stroke="black"/>
-                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="30">
+                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
                                     <!--Compaint Date-->
                                     <Label Grid.Row="0" Grid.Column="0" Text="Date" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding Complaint.ComplaintDate}"  TextColor="Black" FontSize="Small"/>
 
-                                    <!--Division-->
-                                    <Label Grid.Row="1" Grid.Column="0" Text="Division" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Picker Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="bahagian" Title="-- Select Division --" 
+                                    <!--Compaint Type-->
+                                    <Label Grid.Row="1" Grid.Column="0" Text="Date" TextColor="#0FC5BA" FontSize="Medium"/>
+                                    <Label Grid.Row="1" Grid.Column="1" Text="{Binding Complaint.ComplaintType.DisplayComplaintType}"  TextColor="Black" FontSize="Small"/>
+
+                                    <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" IsVisible="{Binding IsHardware}">
+                                        <!--Division-->
+                                        <Label Grid.Row="1" Grid.Column="0" Text="Division" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Picker Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="bahagian" Title="-- Select Division --" 
                                                 ItemsSource="{Binding divisionList}" 
                                                 ItemDisplayBinding="{Binding DivisionName}" 
                                                 SelectedItem="{Binding SelectedDivision}"
                                                 SelectedIndex="{Binding SelectedDivisionIndex}"
                                                 TextColor="Black" />
 
-                                    <!--Damage Type-->
-                                    <Label Grid.Row="3" Grid.Column="0" Text="Damage Type" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Picker Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Damage Type --" ItemsSource="{Binding damageTypeList}" 
+                                        <!--Damage Type-->
+                                        <Label Grid.Row="3" Grid.Column="0" Text="Damage Type" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Picker Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Damage Type --" ItemsSource="{Binding damageTypeList}" 
                                                 ItemDisplayBinding="{Binding DamageTypeName}" TextColor="Black" 
                                                 SelectedItem="{Binding SelectedDamageType}"
                                                 SelectedIndex="{Binding SelectedDamageTypeIndex}"/>
 
-                                    <!--Category-->
-                                    <Label Grid.Row="5" Grid.Column="0" Text="Category" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Picker Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Category --" SelectedItem="{Binding SelectedCategory}"
+                                        <!--Category-->
+                                        <Label Grid.Row="5" Grid.Column="0" Text="Category" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Picker Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Category --" SelectedItem="{Binding SelectedCategory}"
                                                 ItemsSource="{Binding categoryList}" 
                                                 ItemDisplayBinding="{Binding CategoryName}"
                                                 SelectedIndex="{Binding SelectedCategoryIndex}"
                                                 TextColor="Black" />
+                                    </Grid>
+
+                                    <!--Software-->
+                                    <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" IsVisible="{Binding IsSoftware}">
+                                        <!--System-->
+                                        <Label Grid.Row="0" Grid.Column="0" Text="System" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Picker Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select System --" 
+                                                ItemsSource="{Binding SoftwareList}" SelectedItem="{Binding SelectedSystem}" SelectedIndex="{Binding SelectedSystemIndex}"
+                                                ItemDisplayBinding="{Binding DisplaySoftwareSystem}" 
+                                                TextColor="Black" />
+                                        <!--Module-->
+                                        <Label Grid.Row="2" Grid.Column="0" Text="Module" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Picker Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Module --" ItemsSource="{Binding ModuleList}" SelectedIndex="{Binding SelectedModuleIndex}"
+                                                SelectedItem="{Binding SelectedModule}" ItemDisplayBinding="{Binding DisplayModule}" TextColor="Black"/>
+
+                                        <!--Submodule-->
+                                        <Label Grid.Row="4" Grid.Column="0" Text="Submodule" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Picker Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Submodule --" SelectedItem="{Binding SelectedSubmodule}" SelectedIndex="{Binding SelectedSubmoduleIndex}"
+                                                ItemsSource="{Binding SubmoduleList}" ItemDisplayBinding="{Binding DisplaySubmodule}"
+                                                TextColor="Black" />
+
+                                        <!--Submenu-->
+                                        <Label Grid.Row="6" Grid.Column="0" Text="Submenu" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Picker Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Submenu --" SelectedItem="{Binding SelectedSubmenu}" SelectedIndex="{Binding SelectedsubmenuIndex}"
+                                                ItemsSource="{Binding SubmenuList}" ItemDisplayBinding="{Binding DisplaySubmenu}"
+                                                TextColor="Black" />
+
+                                        <!--Image-->
+                                        <Label Grid.Row="8" Grid.Column="0" Text="Reference Picture" TextColor="#0FC5BA" FontSize="Medium"/>
+                                        <Button Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Text="Take a picture" TextColor="White" VerticalOptions="Start" 
+                                    HorizontalOptions="FillAndExpand" Style="{StaticResource Button}" IsVisible="{Binding IsPicture,Converter={StaticResource boolConverter}}" Command="{Binding TakePictureCommand}"/>
+                                        <Grid Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" IsVisible="{Binding IsPicture}">
+                                            <Image IsVisible="{Binding IsPicture}" Source="{Binding Image}"/>
+                                            <ImageButton HeightRequest="25" Source="xmark.png" VerticalOptions="Start" Command="{Binding ClearPictureCommand}"
+                                             HorizontalOptions="End" BackgroundColor="Transparent" Margin="0,-4,5,0"/>
+                                        </Grid>
+                                    </Grid>
 
                                     <!--Description-->
                                     <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Problem Description" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Entry Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.Damage}" FontSize="Medium" />
 
+                                    <!--Phone number-->
+                                    <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Text="Contact Phone Number" TextColor="#0FC5BA" FontSize="Medium"/>
+                                    <Entry Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.ContactPhoneNumber}" FontSize="Medium" />
+
                                 </Grid>
                             </StackLayout>
                         </Frame>
-                        <Frame Style="{StaticResource Card}">
+                        <Frame Style="{StaticResource Card}" IsVisible="{Binding IsHardware}">
                             <StackLayout>
                                 <!--Location Title-->
                                 <Label Text="Location" HorizontalOptions="Center" Margin="0,20,0,0" Style="{StaticResource DetailTitle}" TextColor="{StaticResource DetailColor}" FontSize="Large" />
                                 <Line Style="{StaticResource HorizontalLine}"/>
                                 <Grid RowSpacing="20" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
-
-                                    <!--Location-->
                                     <!--Location-->
                                     <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Location/Department" TextColor="#0FC5BA" FontSize="Medium" />
 
                                     <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Add Location" Style="{StaticResource Button}" Command="{Binding AddLocationCommand}" IsVisible="{Binding IsNotLocation}"  />
 
-                                    <AbsoluteLayout Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" IsVisible="{Binding IsLocation}" Margin="0,-10,0,10" >
-                                        <StackLayout>
+                                    <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" RowDefinitions="Auto,Auto" IsVisible="{Binding IsLocation}">
+                                        <StackLayout Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
                                             <Label Style="{StaticResource CardLabel}" Text="{Binding Location}" HorizontalTextAlignment="Start" />
                                         </StackLayout>
-                                        <Image HeightRequest="50" AbsoluteLayout.LayoutBounds="1, 10, 25, 25"
-                                           AbsoluteLayout.LayoutFlags="PositionProportional"
-                                           Source="pencil.png" Aspect="AspectFit">
-                                            <Image.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding AddLocationCommand}"/>
-                                            </Image.GestureRecognizers>
-                                        </Image>
-                                    </AbsoluteLayout>
+                                        <ImageButton Grid.Column="1" Grid.Row="0" VerticalOptions="Start" HorizontalOptions="End" WidthRequest="30" Source="pencil.png" Command="{Binding AddLocationCommand}" BackgroundColor="Transparent"/>
+                                    </Grid>
 
                                     <!--Image-->
-                                    <Label Grid.Row="3" Grid.Column="0" Text="Reference Picture"  TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Image Grid.Row="4" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
+                                    <Label Grid.Row="2" Grid.Column="0" Text="Reference Picture"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                    <Image Grid.Row="3" Grid.Column="0" Source="{Binding Image}" HorizontalOptions="CenterAndExpand" Grid.ColumnSpan="2"/>
 
                                     <!--Map-->
-                                    <Label Grid.Row="5" Grid.Column="0" Text="Location in Map"  TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2">
+                                    <Label Grid.Row="4" Grid.Column="0" Text="Location in Map"  TextColor="#0FC5BA" FontSize="Medium"/>
+                                    <Grid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2">
                                         <ContentView HeightRequest="500" Content="{Binding Map}"/>
                                         <Image Source="placePin.png" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" HeightRequest="25"/>
                                     </Grid>
